--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
     "expo": "^50.0.8",
     "expo-location": "^16.5.5",
     "expo-status-bar": "~1.11.1",
     "install": "^0.13.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
-    "react-native-maps": "^1.10.3"
+    "react-native-maps": "^1.10.3",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
