--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "6",
+    "@react-navigation/native": "6",
+    "@react-navigation/native-stack": "6",
     "@reduxjs/toolkit": "^2.2.1",
     "expo": "^50.0.8",
     "expo-location": "^16.5.5",
@@ -17,6 +20,8 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-maps": "^1.10.3",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
