--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "6",
     "@reduxjs/toolkit": "^2.2.1",
     "expo": "^50.0.8",
+    "expo-linear-gradient": "^12.7.2",
     "expo-location": "^16.5.5",
     "expo-status-bar": "~1.11.1",
     "install": "^0.13.0",
