--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "install": "^0.13.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-keyboard-aware": "^1.0.4",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^1.10.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
