--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "6",
     "@react-navigation/native-stack": "6",
     "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
     "expo": "^50.0.8",
     "expo-font": "^11.10.3",
     "expo-linear-gradient": "^12.7.2",
