--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@react-navigation/native-stack": "6",
     "@reduxjs/toolkit": "^2.2.1",
     "expo": "^50.0.8",
+    "expo-camera": "^14.0.5",
     "expo-font": "^11.10.3",
+    "expo-image-picker": "^14.7.1",
     "expo-linear-gradient": "^12.7.2",
     "expo-location": "^16.5.5",
     "expo-status-bar": "~1.11.1",
