--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "link": "^2.1.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-google-fonts": "^0.0.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-keyboard-aware": "^1.0.4",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
