--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "install": "^0.13.0",
     "link": "^2.1.0",
     "react": "18.2.0",
+    "react-icons": "^5.0.1",
     "react-native": "0.73.4",
     "react-native-google-fonts": "^0.0.0",
     "react-native-google-places-autocomplete": "^2.5.6",
