--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-icons": "^5.0.1",
-    "react-native": "0.73.4",
+    "react-native": "^0.73.6",
     "react-native-google-fonts": "^0.0.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-keyboard-aware": "^1.0.4",
