--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native": "^0.73.6",
     "react-native-google-fonts": "^0.0.0",
     "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-image-resizer": "^1.4.5",
     "react-native-keyboard-aware": "^1.0.4",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^1.10.3",
