--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-status-bar": "~1.11.1",
     "install": "^0.13.0",
     "link": "^2.1.0",
+    "lottie-react-native": "^6.7.0",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-icons": "^5.0.1",
