--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "18.2.0",
     "react-icons": "^5.0.1",
     "react-native": "^0.73.6",
+    "react-native-dotenv": "^3.4.11",
     "react-native-google-fonts": "^0.0.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-image-resizer": "^1.4.5",
