--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-linear-gradient": "^12.7.2",
     "expo-location": "^16.5.5",
     "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.12",
     "install": "^0.13.0",
     "link": "^2.1.0",
     "lottie-react-native": "^6.7.0",
@@ -48,7 +49,8 @@
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "babel-plugin-inline-dotenv": "^1.7.0"
   },
   "private": true
 }
